--- a/values.yaml
+++ b/values.yaml
@@ -1,3 +1,6 @@
 appName: cart
 appPort: 8080
 params: "prod.cart.redis_host prod.cart.catalogue_host prod.cart.catalogue_port"
+schema:
+  enabled: true
+  type: mongo
